WebKitTools: [Qt] Refactor DRT to not crash on tests which open child windows from javascript. Prevent DRT from showing the main view if these childs get deleted. This fixes https://bugs.webkit.org/show_bug.cgi?id=31591.

Patch by Andras Becsi <abecsi@inf.u-szeged.hu> on 2009-12-03
Reviewed by Kenneth Rohde Christiansen.

* DumpRenderTree/qt/DumpRenderTree.cpp:
(WebCore::WebPage::WebPage):
(WebCore::DumpRenderTree::DumpRenderTree):
(WebCore::DumpRenderTree::~DumpRenderTree):
(WebCore::DumpRenderTree::resetToConsistentStateBeforeTesting):
(WebCore::DumpRenderTree::open):
(WebCore::DumpRenderTree::closeRemainingWindows):
(WebCore::DumpRenderTree::createWindow):
(WebCore::DumpRenderTree::windowCount):
* DumpRenderTree/qt/DumpRenderTree.h:

LayoutTests: [Qt] Re-enable previously skipped tests.
https://bugs.webkit.org/show_bug.cgi?id=31591

Patch by Andras Becsi <abecsi@inf.u-szeged.hu> on 2009-12-03
Reviewed by Kenneth Rohde Christiansen.

* platform/qt/Skipped:



git-svn-id: svn://svn.chromium.org/blink/trunk@51634 bbb929c8-8fbe-4397-9dbb-9b2b20218538