third_party/WebKit/WebKitTools/DumpRenderTree/qt/DumpRenderTree.h
@@ -41,7 +41,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <QSslError>
 #endif
 
+#include <qwebframe.h>
 #include <qwebpage.h>
+#include <qwebview.h>
 
 QT_BEGIN_NAMESPACE
 class QUrl;
@@ -115,6 +117,7 @@ private:
     QString m_expectedHash;
 
     WebPage *m_page;
+    QWebView* m_mainView;
 
     EventSender *m_eventSender;
     TextInputController *m_textInputController;
@@ -123,7 +126,7 @@ private:
     QFile *m_stdin;
     QSocketNotifier* m_notifier;
 
-    QList<QWidget *> windows;
+    QList<QObject*> windows;
     bool m_enableTextOutput;
 };
 
@@ -141,7 +144,7 @@ private slots:
 class WebPage : public QWebPage {
     Q_OBJECT
 public:
-    WebPage(QWidget *parent, DumpRenderTree *drt);
+    WebPage(QObject* parent, DumpRenderTree*);
 
     QWebPage *createWindow(QWebPage::WebWindowType);
 
